# c_utils

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  bytearray.c  bytearray.h  cutil_math.c  cutil_math.h  cutil_string.c  cutil_string.h  main.c  types.h
src/tests/: test_bytearray.c  test_bytearray.h  test_math.c  test_math.h  test_string.c  test_string.h
